Minor fix in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Λήψη εγγράφου από την ΔΙΑΥΓΕΙΑ βάσει ΑΔΑ</h1>
     <div>
       <label for="ada">ΑΔΑ:&nbsp;</label>
-      <input id="ada" property type="text" placeholder="Έισάγετε τον ΑΔΑ εδώ&hellip;">
+      <input id="ada" property type="text" placeholder="Εισάγετε τον ΑΔΑ εδώ&hellip;">
       <a mv-if="ada" href="https://diavgeia.gov.gr/doc/[/* js */ encodeURI(ada.toUpperCase())]">Λήψη αρχείου</a>
   </div>
   </main>
