Styled with skeleton CSS

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Λήψη εγγράφου βάσει ΑΔΑ</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel='stylesheet prefetch' href='https://get.mavo.io/mavo.css'>
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel='stylesheet prefetch' href='https://get.mavo.io/mavo.css'>
 </head>
 
 <body>
-  <main id="app" mv-app mv-bar="none">
+  <main id="app" mv-app mv-bar="none" class="container">
     <h1>Λήψη εγγράφου από την ΔΙΑΥΓΕΙΑ βάσει ΑΔΑ</h1>
-    <div>
-      <label for="ada">ΑΔΑ:&nbsp;</label>
-      <input id="ada" property type="text" placeholder="Εισάγετε τον ΑΔΑ&hellip;">
-      <a mv-if="ada" href="https://diavgeia.gov.gr/doc/[/* js */ encodeURI(ada.toUpperCase())]">Λήψη αρχείου</a>
-  </div>
+    <div class="row">
+      <input id="ada" class="u-full-width" property type="text" placeholder="Εισάγετε τον ΑΔΑ&hellip;">
+      <a mv-if="ada" class="button button-primary" href="https://diavgeia.gov.gr/doc/[/* js */ encodeURI(ada.toUpperCase())]">ΛΗΨΗ ΑΡΧΕΙΟΥ</a>
+    </div>
   </main>
   <script src='https://get.mavo.io/mavo.js'></script>
 </body>
