Some performance fixes in index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Λήψη εγγράφου βάσει ΑΔΑ</title>
-  <script src='https://get.mavo.io/mavo.js'></script>
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel='stylesheet prefetch' href='https://get.mavo.io/mavo.css'>
+  <link href="css/normalize.min.css" media="all">
+  <link rel="stylesheet" prefetch href="css/skeleton.css">
+  <link rel="stylesheet" prefetch href="css/style.css">
+  <link rel="stylesheet" prefetch' href='https://get.mavo.io/mavo.css'>
 </head>
 
 <body>
@@ -19,5 +18,7 @@
       <a mv-if="ada" class="button button-primary" href="https://diavgeia.gov.gr/doc/[/* js */ encodeURI(ada.toUpperCase())]">ΛΗΨΗ ΑΡΧΕΙΟΥ</a>
     </div>
   </main>
+
+  <script src='https://get.mavo.io/mavo.min.js'></script>
 </body>
 </html>
