--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main id="app" mv-app mv-bar="none" class="container">
     <h1>Λήψη εγγράφου από την ΔΙΑΥΓΕΙΑ βάσει ΑΔΑ</h1>
     <div class="row">
-      <input class="u-full-width" property="ada" type="text" placeholder="Εισάγετε τον ΑΔΑ&hellip;">
+      <input class="u-full-width" property="ada" autofocus type="text" placeholder="Εισάγετε τον ΑΔΑ&hellip;">
       <a mv-if="ada" class="button button-primary" href="https://diavgeia.gov.gr/doc/[/* js */ encodeURI(ada.toUpperCase())]">ΛΗΨΗ ΑΡΧΕΙΟΥ</a>
     </div>
   </main>
