--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <main id="app" mv-app mv-bar="none" class="container">
-    <h1>Λήψη εγγράφου από την ΔΙΑΥΓΕΙΑ βάσει ΑΔΑ</h1>
+    <h1>Λήψη εγγράφου από την ΔΙΑΥΓΕΙΑ</h1>
     <div class="row">
       <input class="u-full-width" property="ada" autofocus type="text" placeholder="Εισάγετε τον ΑΔΑ&hellip;">
       <a mv-if="ada" class="button button-primary" href="https://diavgeia.gov.gr/doc/[/* js */ encodeURI(ada.toUpperCase())]">ΛΗΨΗ ΑΡΧΕΙΟΥ</a>
